[leasing] dark mode fixes
* Apply dark mode to the whole page.
* Apply dark mode to the left nav icons.

Bug: skia:11039

--- a/leasing/modules/leasing-scaffold-sk/leasing-scaffold-sk.scss
+++ b/leasing/modules/leasing-scaffold-sk/leasing-scaffold-sk.scss
@@ -45,6 +45,11 @@ leasing-scaffold-sk {
     margin-right: 1em;
   }
 
+  /* Overrides to elements-sk elements since they set color internally. */
+  svg.icon-sk-svg {
+    fill: var(--on-surface);
+  }
+
   h1 {
     font-weight: normal;
   }
@@ -60,13 +65,4 @@ leasing-scaffold-sk {
   .name {
     font-size: 20px;
   }
-}
-
-
-// Make sure the app doesn't leave empty space on the bottom. e.g. blank
-// white in darkmode.
-html,
-body,
-app-sk {
-  min-height: 100%;
 }
